Move profiling framework to appendix

--- a/content/introduction/introduction.tex
+++ b/content/introduction/introduction.tex
@@ -28,7 +28,8 @@ GNN-based architectures are orders of magnitudes faster than traditional methods
 
 \subsection{Problem definition}
 
-
+Although GNNs allow faster prediction of the outcome of molecular simulations, they are still computationally intensive 
+to train, 
 
 Molecular simulations are known to be very computationally intensive. The use of machine learning models, in particular 
 Graph Neural Networks, has been very successful and lead to a shift in predicting such simulations instead of 
