--- a/content/appendix.tex
+++ b/content/appendix.tex
@@ -5,9 +5,31 @@
 \subsection{Profiling Framework}
 \label{appendix:profiling}
 
-custom profling framework for PyTorch which tracks each individual phase 
-of computations, in specific the dataloading, forward pass and backward pass,
+We implemented a custom profling framework for PyTorch to collect data for detailed runtime 
+and memory usage analysis. Our profiler contains three components:
 
+\begin{enumerate}
+    \item \textit{Resource monitor thread}: Runs in parallel to the data parallel training 
+    processes and tracks CPU memory usage, as well as memory usage on each GPU. The monitor 
+    takes snapshot at a configurable time interval (2 seconds for all our runs).
+    \item \textit{Phase clocking component}: Tracks runtime of all phases during each training 
+    step, as well as total epoch time. The phases include time spend on fetching data from 
+    the dataloader, forward pass, and backward pass. All phase times are tracking through clocks 
+    which are activated when the training scripts enters a specific phase and deactivated when 
+    it leaves the phase.
+    \item \textit{PyTorch internal memory tracker}: Tracks allocated and reserved memory from 
+    PyTorch directly. This allows the profiler to detect how much GPU memory is used only for
+    tensors and not any other components of the framework.
+\end{enumerate}
+
+
+The profiler is implemented as part of the OCP codebase. The implementation of each component 
+is located in the tracking package\footnote{\url{https://github.com/TUM-DI-Lab-Graph-Scaling/ocp/tree/main/ocpmodels/tracking}}.
+
+Our profiler is not an alternative to the official PyTorch profiler, but rather a complementary 
+module to gather data on long running experiments. For shorter experiments, which just run over 
+the span of a few training steps, the PyTorch profilier offers far more detailed data collection 
+and better visualization support through a Tensorboard plugin.
 
 
 \newpage
