--- a/content/introduction/introduction.tex
+++ b/content/introduction/introduction.tex
@@ -26,7 +26,7 @@ Networks (GNNs) are currently the dominant architecture for designing geometric 
 which are based on the message passing paradigm, where nodes gather features from neighbors, transform them via 
 differentiable functions and scatter to outgoing neighboring nodes. Especially for molecular predictions, 
 GNN-based architectures are orders of magnitudes faster than traditional methods from quantum chemistry. 
-Meta AI introduced the Open Catalyst Project (OCP) \cite{Chanussot_2021} in 2020 to provide unified baseline models and datasets for 
+Meta AI introduced the Open Catalyst Project (OCP) \cite*{Chanussot_2021} in 2020 to provide unified baseline models and datasets for 
 force and energy predictions of molecular structures, more specificially Catalysts. There has been a number 
 of high-quality GNN based model submissions 
 \cite*{DBLP:journals/corr/abs-2003-03123, https://doi.org/10.48550/arxiv.2106.08903, https://doi.org/10.48550/arxiv.2203.09697} to the project which we will describe further in 
