--- a/content/introduction/introduction.tex
+++ b/content/introduction/introduction.tex
@@ -5,7 +5,7 @@
 Training large-scale models is the Formula 1 of the Machine learning research community: Large labs and corporations with 
 almost unlimited resources compete to outperform each other in model size and accuracy improvements to the decimal points. 
 Consequently, in recent years there has been a surge of more efficient and scalable methods to train deep learning models 
-in parallel on multiple GPUs or even multiple machines. Most of the methods are desinged for large language models, however 
+in parallel on multiple GPUs or even multiple machines. Most of the methods are designed for large language models, however 
 also offer general solutions to problems such as linear scalability, memory efficiency and 
 communication reduction. With graph machine learning gaining ever more prominence in physics-focussed prediciton tasks and 
 simulations, we adopted some of these scaling methods and applied them to machine learning models that operate on graphs. 
@@ -50,8 +50,8 @@ for large transformer models and, to the best of our knowledge, never applied to
 
 In our work, we forked the OCP project to integrate DeepSpeed into the training pipeline of the most widely-used 
 and successful models in energy and force predicition of catalysts. 
-We benchmark our approach by evaluating the epoch runtime and memory usage of the GNN architectures GemNet and 
-DimeNet++ using different configurations of DeepSpeed on the OC20 dataset.
+We benchmark our approach by performing an abloation analysis the epoch runtime and memory usage of the GNN architectures GemNet and 
+DimeNet++ using DeepSpeed on the OC20 dataset.
 
 
 \subsection{Contributions}
