--- a/content/preliminaries/atomic_simulations.tex
+++ b/content/preliminaries/atomic_simulations.tex
@@ -9,7 +9,7 @@ and would like to predict properties of this very molecule, e.g. its energy (at 
 current point in time or after some evolution) or the forces acting on the 
 individual atoms. Some of these properties might be directly
 computable using quantum mechanical methods---like Density Functional Theory (DFT) 
-\cite{doi:10.1021/ed5004788}. However, quantum mechanical based methods often come
+\cite{doi:10.1021/ed5004788}. However, quantum mechanics based methods often come
 with significant drawbacks as they are extremely expensive from a computational 
 standpoint, imposing the necessity to either optimize these conventional methods 
 as far as possible or use completely different approaches.
