--- a/content/preliminaries/ocp.tex
+++ b/content/preliminaries/ocp.tex
@@ -1,7 +1,7 @@
 \subsection{Open Catalyst Project}
 
 Catalysis plays a crucial role in the chemical industry, including energy storage and conversion in 
-fuel cells or the production of ammonia for fertilizers, by enabling new reactions and improved 
+fuel cells or the production of ammonia for fertilizers by enabling new reactions and improved 
 process efficiencies \cite{Chanussot_2021}. Problematic is that the number of materials that can 
 be used or modified in catalysis is very large and modeling of materials during reactions is very 
 complex and compute-intensive.
